--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,7 +6,7 @@
     top: 0;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.5);
-    visibility: hidden;;
+    visibility: hidden;
     display: none;
     justify-content: center;
     align-items: center;
