--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,9 +1,10 @@
 .profile__add-button{
-    background-image: url("../../../images/add-button.svg");
-    background-size: cover;
+    background-image: url("../../../images/add-btn.svg");
+    background-size: 22px 22px;
     background-repeat: no-repeat;
-    background-color: transparent;
-    border: none;
+    background-color: #000;
+    background-position: center center;
+    border: 1px solid #fff;
     border-radius: 2px;
     cursor: pointer;
     box-sizing: border-box;
@@ -19,5 +20,7 @@
     .profile__add-button{
         width: 282px;
         margin: 0;
+        background-size: 100px 50px;
+        background-size: 16px 16px;
     }
 }
