--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,8 @@
     max-width: 880px;
     width: 100%;
     height: 74px;
-    margin: 0 auto;
-    border-bottom: 1px #545454 solid;
+    margin: 0 auto 36px;
+    border-bottom: 1px rgba(84, 84, 84, 0.7) solid;
 }
 
 @media screen and (max-width: 880px) {
