--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -14,6 +14,10 @@
     text-align: center;
 }
 
+.popup__submit:hover {
+    opacity: 0.8;
+  }
+
 @media screen and (max-width: 700px) {
     .popup__submit{
         width: 238px;
