style: formatting all code pages

--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,8 +1,8 @@
-.element{
-    width: 282px;
-    height: 361px;
-    border-radius: 10px;
-    margin: 0 auto;
-    background-color: #FFFFFF;
-    color: #000000;
+.element {
+  width: 282px;
+  height: 361px;
+  border-radius: 10px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  color: #000000;
 }
