--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -1,7 +1,7 @@
 .element__info {
   max-width: 288px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 24px 15px 25px 21px;
 }
