--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,6 @@
 .element {
   width: 282px;
-  height: 361px;
+  min-height: 361px;
   border-radius: 10px;
   margin: 0 auto;
   background-color: #ffffff;
