--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  background-image: url("../../../images/logo-header.png");
+  background-image: url("../../../images/logo.svg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 173px;
