--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,13 @@
 .header {
   max-width: 880px;
   width: 100%;
-  height: 74px;
-  margin: 0 auto 36px;
+  min-height: 74px;
+  margin: 0 auto 36.25px;
   border-bottom: 1px rgba(84, 84, 84, 0.7) solid;
 }
 
 @media screen and (max-width: 880px) {
   .header {
-    margin: 0 auto 42px;
+    margin: 0 auto 38.25px;
   }
 }
