--- a/blocks/popup/___input/popup__input.css
+++ b/blocks/popup/___input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
   margin: 0 36px;
   border: none;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -18,6 +18,8 @@
 
 .popup__input:focus {
   outline: none;
+  background-color: rgba(84, 84, 84, 0.1);
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 700px) {
