--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,6 +1,6 @@
 .popup__content {
   max-width: 430px;
-  height: 330px;
+  min-height: 330px;
   width: 100%;
   border: 1px solid #000000;
   border-radius: 10px;
@@ -11,6 +11,6 @@
 @media screen and (max-width: 700px) {
   .popup__content {
     max-width: 282px;
-    height: 322px;
+    min-height: 322px;
   }
 }
