--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,7 +2,7 @@
   background-image: url("../../../images/add-btn.svg");
   background-size: 22px 22px;
   background-repeat: no-repeat;
-  background-color: #000;
+  background-color: transparent;
   background-position: center center;
   border: 1px solid #fff;
   border-radius: 2px;
