--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,16 +1,18 @@
 .popup__title {
-  margin: 25.72px 0 54px 36px;
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
   line-height: 29px;
   letter-spacing: 0em;
   text-align: left;
+  margin: 0 auto 54px;
 }
 
 @media screen and (max-width: 700px) {
   .popup__title {
     width: 238px;
-    margin: 25px 22px 76px;
+    margin-bottom: 76px;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
