--- a/blocks/popup/___input/popup__input.css
+++ b/blocks/popup/___input/popup__input.css
@@ -1,5 +1,5 @@
 .popup__input {
-  margin: 0 36px;
+  margin: 0;
   border: none;
   border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
   font-size: 14px;
@@ -13,7 +13,7 @@
 }
 
 .popup__input:nth-child(2) {
-  margin: 29.74px 36px 0;
+  margin: 30px 0;
 }
 
 .popup__input:focus {
@@ -25,10 +25,10 @@
 @media screen and (max-width: 700px) {
   .popup__input {
     width: 238px;
-    margin: 0 22px;
+    margin: 0;
   }
 
   .popup__input:nth-child(2) {
-    margin: 30px 22px 0;
+    margin: 30px 0;
   }
 }
