--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,16 +1,17 @@
 .popup__content {
   max-width: 430px;
-  min-height: 330px;
   width: 100%;
   border: 1px solid #000000;
   border-radius: 10px;
   background-color: white;
   position: relative;
+  padding: 34px 36px 36.51px 36px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 700px) {
   .popup__content {
     max-width: 282px;
-    min-height: 322px;
+    padding: 25px 22px;
   }
 }
