--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,5 +1,5 @@
 .element__like-button {
-  background-image: url(../../../images/like-button.svg);
+  background-image: url("../../../images/like-button.svg");
   background-color: transparent;
   background-size: contain;
   background-repeat: no-repeat;
