--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,11 +7,13 @@
   margin: auto;
   background-color: rgba(0, 0, 0, 0.5);
   visibility: hidden;
-  display: none;
+  display: block;
   justify-content: center;
   align-items: center;
   border: 1px solid #000;
   color: #000;
+  opacity: 0;
+  transition:  visibility 0s, opacity 0.5s ease-in-out;
 }
 
 @media screen and (max-width: 700px) {
@@ -20,3 +22,5 @@
     background-size: contain;
   }
 }
+
+
