--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,4 @@
 @import url(../blocks/popup/__image-info/popup__image-info.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/__error/popup__error.css);
