--- a/blocks/popup/___input/popup__input.css
+++ b/blocks/popup/___input/popup__input.css
@@ -1,34 +1,39 @@
 .popup__input {
-  margin: 0;
-  border: none;
-  border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 17px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #000;
-  width: 350px;
+ margin: 0;
+ border: none;
+ border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+ font-size: 14px;
+ font-style: normal;
+ font-weight: 400;
+ line-height: 17px;
+ letter-spacing: 0em;
+ text-align: left;
+ color: #000;
+ width: 350px;
+ padding: 30px 0 10px;
 }
 
 .popup__input:nth-child(2) {
-  margin: 30px 0;
+ margin: 30px 0;
 }
 
 .popup__input:focus {
-  outline: none;
-  background-color: rgba(84, 84, 84, 0.1);
-  border-radius: 5px;
+ outline: none;
+ background-color: rgba(84, 84, 84, 0.1);
+ border-radius: 5px;
 }
 
 @media screen and (max-width: 700px) {
-  .popup__input {
-    width: 238px;
-    margin: 0;
-  }
+ .popup__input {
+  width: 238px;
+  margin: 0;
+ }
 
-  .popup__input:nth-child(2) {
-    margin: 30px 0;
-  }
+ .popup__input:nth-child(2) {
+  margin: 30px 0;
+ }
+}
+
+.popup__input_type_error {
+ border-bottom: 1px #ff0000 solid;
 }
