--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,30 +1,42 @@
 .popup__submit {
-  width: 358px;
-  height: 50.15px;
-  border-radius: 2px;
-  margin: 12px auto 0;
-  background-color: black;
-  border: none;
-  color: white;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0em;
-  text-align: center;
-  cursor: pointer;
+ width: 358px;
+ height: 50.15px;
+ border-radius: 2px;
+ margin: 12px auto 0;
+ background-color: black;
+ border: none;
+ color: white;
+ font-size: 18px;
+ font-style: normal;
+ font-weight: 400;
+ line-height: 22px;
+ letter-spacing: 0em;
+ text-align: center;
+ cursor: pointer;
 }
 
 .popup__submit:hover {
-  opacity: 0.8;
+ opacity: 0.8;
+ background: #000000cc;
+ color: white;
 }
 
 @media screen and (max-width: 700px) {
-  .popup__submit {
-    width: 238px;
-    height: 46px;
-    margin: 16px 0 0;
-    font-size: 14px;
-    line-height: 17px;
-  }
+ .popup__submit {
+  width: 238px;
+  height: 46px;
+  margin: 16px 0 0;
+  font-size: 14px;
+  line-height: 17px;
+ }
+}
+
+.popup__submit_disabled {
+ background-image: url("../../../images/submit-disabled-button.svg");
+ color: #000000;
+ background-color: transparent;
+ opacity: 0.2;
+ border: 1px solid #000000;
+ box-sizing: border-box;
+ border-radius: 2px;
 }
