--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,14 +1,5 @@
 .header {
+  margin: 0 auto 40px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   max-width: 880px;
-  width: 100%;
-  min-height: 74px;
-  margin: 0 auto 36.25px;
-  border-bottom: 1px rgba(84, 84, 84, 0.7) solid;
-}
-
-@media screen and (max-width: 880px) {
-  .header {
-    margin: 0 auto 38.25px;
-    min-height: 0;
-  }
 }
