--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {
-  margin: 0 auto 0 30px;
+  margin: 0 auto 0 0;
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 715px) {
   .profile__info {
+    text-align: center;
     margin: 26.25px auto 36px;
   }
 }
