--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,12 +1,13 @@
 .profile {
-  max-width: 880px;
-  width: 100%;
-  margin: 0 auto;
+  color: #ffffff;
   display: flex;
+  max-width: 880px;
+  margin: 0 auto;
+  width: 100%;
   align-items: center;
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 715px) {
   .profile {
     flex-direction: column;
   }
