--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -1,12 +1,11 @@
 .footer__copyright {
   color: #545454;
   font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
   line-height: 22px;
-  letter-spacing: 0em;
-  text-align: left;
+  font-style: normal;
+  font-weight: normal;
   margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 880px) {
