--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
-  margin: 68px auto 60px;
   max-width: 880px;
+  margin: 68px auto 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 880px) {
