--- a/src/blocks/popup/__error/popup__error.css
+++ b/src/blocks/popup/__error/popup__error.css
@@ -1,17 +1,11 @@
 .popup__error {
- visibility: none;
- display: none;
- font-style: normal;
- font-weight: 400;
- font-size: 12px;
- line-height: 14.52px;
- color: #ff0000;
- padding: 0;
- margin: 0;
-}
-
-.popup__error_visible {
- visibility: visible;
- display: block;
- color: #ff0000;
+  visibility: none;
+  display: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  margin-left: 36px;
+  margin-top: 5px;
 }
