--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,24 +1,15 @@
 .popup {
- width: 100%;
- min-height: 100%;
- position: fixed;
- left: 0;
- top: 0;
- margin: auto;
- background-color: rgba(0, 0, 0, 0.5);
- visibility: hidden;
- display: block;
- justify-content: center;
- align-items: center;
- border: 1px solid #000;
- color: #000;
- opacity: 0;
- transition: visibility 0s, opacity 0.5s ease-in-out;
-}
-
-@media screen and (max-width: 700px) {
- .popup {
-  margin: 0 auto;
-  background-size: contain;
- }
+  width: 100%;
+  min-height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 }
