--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -1,26 +1,25 @@
 .profile__add-button {
-  background-image: url("../../../images/add-btn.svg");
-  background-size: 22px 22px;
-  background-repeat: no-repeat;
-  background-color: transparent;
-  background-position: center center;
-  border: 2px solid #fff;
-  border-radius: 2px;
-  cursor: pointer;
-  box-sizing: border-box;
+  background-image: url(../../../images/button/add_Button.svg);
   width: 150px;
   height: 50px;
+  margin: 15px 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-sizing: border-box;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
   opacity: 0.6;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   .profile__add-button {
     width: 282px;
     margin: 0;
-    background-size: 100px 50px;
-    background-size: 16px 16px;
   }
 }
