--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,21 +1,22 @@
 .profile__edit-button {
-  background-image: url(../../../images/edit-button.svg);
+  background-image: url(../../../images/button/edit_button.svg);
+  width: 24px;
+  height: 24px;
+  margin-top: 5px;
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
-  border: 1px solid #ffffff;
-  width: 24px;
-  height: 24px;
-  margin: 0;
   cursor: pointer;
-  max-width: 42px;
+  padding: 0;
+  box-sizing: border-box;
+  border: 1px solid #ffffff;
 }
 
 .profile__edit-button:hover {
   opacity: 0.6;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
